--- a/assets/styles/sass/_header.scss
+++ b/assets/styles/sass/_header.scss
@@ -1,21 +1,24 @@
 .header-book {
         display:grid;
-        grid-template-columns: .1fr .1fr .5fr .2fr .1fr;
+        grid-template-columns: 1fr 2fr 4fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
         box-shadow: 0px 2px 2px 0 rgba(136, 18, 18, 0.5);
         width:100%;
+        min-height: 15vh;
         background-color:#fdebde;
         color:black;
 }
 
 
 body > header > figure {
-    height:100%;
     padding-left: 2vw;
     grid-column: 2/3;
+    grid-row: 1/4;
+    max-height: 15vh;
 }
 
 body > header > figure > img {
-    width:70%;
+    height:100%;
 }
 
 body > header > nav {
@@ -24,6 +27,7 @@ body > header > nav {
     flex-direction: space-evenly;
     align-items:center;
     justify-content:center;
+    grid-row: 2/3;
 }
 
 body > header > nav > ul  {
@@ -47,6 +51,8 @@ body > header > ul {
     display:flex;
     align-items:center;
     justify-self:center;
+    grid-row: 2/3;
+    grid-column: 4/5;
 }
 
 body > header > ul > li {
