--- a/assets/styles/sass/_classes.scss
+++ b/assets/styles/sass/_classes.scss
@@ -14,11 +14,13 @@
     @media(prefers-color-scheme: light){
         
         background-color: $almond;
+        color: $black;
     }
     
     @media(prefers-color-scheme: dark){
         
         background-color: $black;
+        color: $almond;
     }
 }
 
