--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -73,11 +73,13 @@ table {
 @media (prefers-color-scheme: light) {
   .body-mode {
     background-color: #fdebde;
+    color: rgba(0, 0, 0, 0.9);
   }
 }
 @media (prefers-color-scheme: dark) {
   .body-mode {
     background-color: rgba(0, 0, 0, 0.9);
+    color: #fdebde;
   }
 }
 
@@ -277,24 +279,43 @@ body > footer {
   display: grid;
   grid-template-columns: 1fr 2fr 4fr 2fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  box-shadow: 0px 2px 2px 0 rgba(136, 18, 18, 0.5);
   width: 100%;
   min-height: 15vh;
 }
 @media (prefers-color-scheme: light) {
   .header-book {
     background-color: #fdebde;
+    box-shadow: 0px 2px 2px rgba(136, 18, 18, 0.5);
   }
   .header-book a {
     color: rgba(0, 0, 0, 0.9);
   }
+  .header-book .dark-logo {
+    display: none;
+  }
+  .header-book nav a:hover {
+    border-bottom: solid 4px rgba(136, 18, 18, 0.7);
+    border-right: solid 5px rgba(136, 18, 18, 0.7);
+    border-top: solid 1px rgba(136, 18, 18, 0.1);
+    border-left: solid 1px rgba(136, 18, 18, 0.1);
+  }
 }
 @media (prefers-color-scheme: dark) {
   .header-book {
-    background-color: rgba(0, 0, 0, 0.9);
+    box-shadow: 0px 2px 2px rgb(194, 43, 43);
   }
   .header-book a {
     color: #fdebde;
+  }
+  .header-book a:hover {
+    color: #fdebde;
+  }
+  .header-book .light-logo {
+    display: none;
+  }
+  .header-book nav a:hover {
+    border-bottom: solid 4px #c22b2b;
+    border-right: solid 4px #c22b2b;
   }
 }
 
@@ -375,10 +396,6 @@ body > header a:hover {
 }
 
 body > header > nav a:hover {
-  border-bottom: solid 4px rgba(136, 18, 18, 0.7);
-  border-right: solid 5px rgba(136, 18, 18, 0.7);
-  border-top: solid 1px rgba(136, 18, 18, 0.1);
-  border-left: solid 1px rgba(136, 18, 18, 0.1);
   padding: 1.5vh 2vw;
   transition: all 0.3s ease-out;
 }
