--- a/assets/styles/sass/_vars.scss
+++ b/assets/styles/sass/_vars.scss
@@ -3,6 +3,7 @@
 $black: rgba(0, 0, 0, 0.9);
 $almond: #fdebde;
 $red: #881212;
+$darkThemeRed:#c22b2b;
 
 /******************** POLICES ********************/
 
