--- a/assets/styles/sass/_home-page.scss
+++ b/assets/styles/sass/_home-page.scss
@@ -1,6 +1,6 @@
-#home-page{
+#home-page {
 
-    &>main{
+    &>main {
 
         display: grid;
         grid-template-columns: .1fr .8fr .1fr;
@@ -11,10 +11,50 @@
             grid-column: 2/3;
             height: 15vh;
 
-            &:first-of-type{
-                display:grid;
-                grid-template-columns: 1fr 1fr;
+            &:first-of-type {
+                min-height: 50vh;
+                display: grid;
+                grid-template-columns: 1fr 4fr 4fr 1fr;
                 grid-column: 1/4;
+                background: rgba(209, 176, 133, 0.7);
+
+                &>section {
+                    justify-self: center;
+                    align-self: center;
+                    grid-column: 2/3;
+                    & span {
+                        @media(prefers-color-scheme: light) {
+                            color:$red;
+                        }
+
+                        @media(prefers-color-scheme: dark) {
+                            color: $darkThemeRed;
+                        }
+                    }
+
+
+                    &>h2 {
+                        font-size: 6rem;
+                        text-transform: uppercase;
+                    }
+
+                    &>h3 {
+                        font-size: 4rem;
+                    }
+
+                }
+                &>figure {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    grid-column: 3/4;
+
+                    &>img {
+                        width: 90%;
+                    }
+                }
+
+
             }
         }
     }
