--- a/assets/styles/sass/_home-page.scss
+++ b/assets/styles/sass/_home-page.scss
@@ -4,12 +4,33 @@
 
         display: grid;
         grid-template-columns: .1fr .8fr .1fr;
+        padding-bottom: 5vh;
 
 
         &>section {
 
             grid-column: 2/3;
-            height: 15vh;
+
+            &:not(:first-of-type) {
+                display:grid;
+                grid-template-columns: repeat(3, 1fr);
+                padding-top: 10vh;
+                grid-row-gap:2vh;
+
+                &>h4 {
+                    grid-column:1/4;
+                    font-size: 2rem;
+                    text-transform:uppercase;
+                    padding-bottom:3vh;
+                    font-weight:bold;
+                }
+
+                & > .book {
+                    width:50%;
+                    align-self:center;
+                    justify-self:center;
+                }
+            }
 
             &:first-of-type {
                 min-height: 50vh;
